test/Fail/LocalRewriteNoEtaImplicit.err
LocalRewriteNoEtaImplicit.agda:13.16-21: error: [UnequalTerms]
The terms
  1
and
  0
are not equal at type Nat
when checking the following local rewrite rule constraint:
   |-  1  =  0  :  Nat
when checking that 1 is a valid argument to a function of type
(n : Nat) {@rewrite p : n ≡ 0} → Nat
